{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 139,
  "lineage": "bf3d3772-1407-9b21-14c5-86b7713698ae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b23a6dc840407bdc",
            "domain": "vpc",
            "id": "eipalloc-0b23a6dc840407bdc",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-223-120-85.us-west-2.compute.amazonaws.com",
            "public_ip": "34.223.120.85",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "qa_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c09c7eb16d3e8e70",
            "arn": "arn:aws:ec2:us-west-2:682574356252:instance/i-045855bcb80c3c775",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045855bcb80c3c775",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "standard",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-036eb499eab738aea",
            "private_dns": "ip-172-168-1-194.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.168.1.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a124374a4f6caf76",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c27066f0ef2fdfcd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072ec150be0df4547",
            "tags": {
              "Name": "instance-1"
            },
            "tags_all": {
              "Name": "instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c27066f0ef2fdfcd"
            ]
          },
          "dependencies": [
            "aws_security_group.qa_sg",
            "aws_subnet.qa_subnet",
            "aws_vpc.qa_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c09c7eb16d3e8e70",
            "arn": "arn:aws:ec2:us-west-2:682574356252:instance/i-03abedc7d8d29a24c",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03abedc7d8d29a24c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "standard",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06ca3cb07d2348065",
            "private_dns": "ip-172-168-1-152.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.168.1.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a3982837eb3e796f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c27066f0ef2fdfcd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072ec150be0df4547",
            "tags": {
              "Name": "instance-2"
            },
            "tags_all": {
              "Name": "instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c27066f0ef2fdfcd"
            ]
          },
          "dependencies": [
            "aws_security_group.qa_sg",
            "aws_subnet.qa_subnet",
            "aws_vpc.qa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "qa_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:682574356252:internet-gateway/igw-0ffb68719ba2eee05",
            "id": "igw-0ffb68719ba2eee05",
            "owner_id": "682574356252",
            "tags": {
              "Name": "qa_igw"
            },
            "tags_all": {
              "Name": "qa_igw"
            },
            "vpc_id": "vpc-00f32591937866832"
          },
          "dependencies": [
            "aws_vpc.qa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "qa_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:682574356252:loadbalancer/app/qa-ApplicationLoadBalancer/6398b1577edd0a0d",
            "arn_suffix": "app/qa-ApplicationLoadBalancer/6398b1577edd0a0d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "qa-ApplicationLoadBalancer-1544008223.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:682574356252:loadbalancer/app/qa-ApplicationLoadBalancer/6398b1577edd0a0d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "qa-ApplicationLoadBalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c27066f0ef2fdfcd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05008c92cf4764364"
              },
              {
                "subnet_id": "subnet-072ec150be0df4547"
              }
            ],
            "subnets": [
              "subnet-05008c92cf4764364",
              "subnet-072ec150be0df4547"
            ],
            "tags": {
              "Environment": "qa"
            },
            "tags_all": {
              "Environment": "qa"
            },
            "vpc_id": "vpc-00f32591937866832",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_lb_target_group.qa_tg",
            "aws_security_group.qa_sg",
            "aws_subnet.qa_subnet",
            "aws_vpc.qa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "qa_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:682574356252:listener/app/qa-ApplicationLoadBalancer/6398b1577edd0a0d/e57f54eaf2c96e5d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:682574356252:targetgroup/QATargetGroup/18a44c6bf3642909",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:682574356252:listener/app/qa-ApplicationLoadBalancer/6398b1577edd0a0d/e57f54eaf2c96e5d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:682574356252:loadbalancer/app/qa-ApplicationLoadBalancer/6398b1577edd0a0d",
            "port": 4200,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "Listener-1"
            },
            "tags_all": {
              "Name": "Listener-1"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.qa_alb",
            "aws_lb_target_group.qa_tg",
            "aws_security_group.qa_sg",
            "aws_subnet.qa_subnet",
            "aws_vpc.qa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "qa_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:682574356252:targetgroup/QATargetGroup/18a44c6bf3642909",
            "arn_suffix": "targetgroup/QATargetGroup/18a44c6bf3642909",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "4200",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:682574356252:targetgroup/QATargetGroup/18a44c6bf3642909",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "QATargetGroup",
            "port": 4200,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "QA_TargetGroup"
            },
            "tags_all": {
              "Name": "QA_TargetGroup"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00f32591937866832"
          },
          "dependencies": [
            "aws_vpc.qa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "QA_TG_Attach1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:682574356252:targetgroup/QATargetGroup/18a44c6bf3642909-20221112101019500200000006",
            "port": 4200,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:682574356252:targetgroup/QATargetGroup/18a44c6bf3642909",
            "target_id": "i-045855bcb80c3c775"
          },
          "dependencies": [
            "aws_instance.qa_ec2",
            "aws_lb_target_group.qa_tg",
            "aws_security_group.qa_sg",
            "aws_subnet.qa_subnet",
            "aws_vpc.qa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "QA_TG_Attach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:682574356252:targetgroup/QATargetGroup/18a44c6bf3642909-20221112101019189200000005",
            "port": 4200,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:682574356252:targetgroup/QATargetGroup/18a44c6bf3642909",
            "target_id": "i-03abedc7d8d29a24c"
          },
          "dependencies": [
            "aws_instance.qa_ec2",
            "aws_lb_target_group.qa_tg",
            "aws_security_group.qa_sg",
            "aws_subnet.qa_subnet",
            "aws_vpc.qa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "qa_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b23a6dc840407bdc",
            "connectivity_type": "public",
            "id": "nat-08c6797218b74b5b8",
            "network_interface_id": "eni-0ad41df885bc9fa1b",
            "private_ip": "172.168.0.169",
            "public_ip": "34.223.120.85",
            "subnet_id": "subnet-05008c92cf4764364",
            "tags": {
              "Name": "qa_NAT"
            },
            "tags_all": {
              "Name": "qa_NAT"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_subnet.qa_subnet",
            "aws_vpc.qa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "qa_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ffb68719ba2eee05",
            "id": "r-rtb-08cdd83e0c468fb0c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08cdd83e0c468fb0c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.qa_igw",
            "aws_route_table.qa_Rtb",
            "aws_vpc.qa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "qt_igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-012bde6f98ecb88171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08c6797218b74b5b8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-012bde6f98ecb8817",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.qa_NAT",
            "aws_route_table.qa_Rtb",
            "aws_subnet.qa_subnet",
            "aws_vpc.qa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "qa_Rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:682574356252:route-table/rtb-08cdd83e0c468fb0c",
            "id": "rtb-08cdd83e0c468fb0c",
            "owner_id": "682574356252",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pub_rt"
            },
            "tags_all": {
              "Name": "pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f32591937866832"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.qa_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:682574356252:route-table/rtb-012bde6f98ecb8817",
            "id": "rtb-012bde6f98ecb8817",
            "owner_id": "682574356252",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pvt_rt"
            },
            "tags_all": {
              "Name": "pvt_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f32591937866832"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.qa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assc_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070f06120e9170440",
            "route_table_id": "rtb-08cdd83e0c468fb0c",
            "subnet_id": "subnet-05008c92cf4764364"
          },
          "dependencies": [
            "aws_route_table.qa_Rtb",
            "aws_subnet.qa_subnet",
            "aws_vpc.qa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assc_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0918b52ca84f554e5",
            "route_table_id": "rtb-012bde6f98ecb8817",
            "subnet_id": "subnet-072ec150be0df4547"
          },
          "dependencies": [
            "aws_route_table.qa_Rtb",
            "aws_subnet.qa_subnet",
            "aws_vpc.qa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "qa_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:682574356252:security-group/sg-0c27066f0ef2fdfcd",
            "description": "This is the sg from terraform for qa environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c27066f0ef2fdfcd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open 4200",
                "from_port": 4200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open 8081",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221112100938672300000001",
            "name_prefix": "terraform-",
            "owner_id": "682574356252",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "qa_sg"
            },
            "tags_all": {
              "Name": "qa_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f32591937866832"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.qa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "qa_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:682574356252:subnet/subnet-05008c92cf4764364",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05008c92cf4764364",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682574356252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Qa_App_Subnet"
            },
            "tags_all": {
              "Name": "Qa_App_Subnet"
            },
            "vpc_id": "vpc-00f32591937866832"
          },
          "dependencies": [
            "aws_vpc.qa_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:682574356252:subnet/subnet-072ec150be0df4547",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072ec150be0df4547",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682574356252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Qa_App_Subnet"
            },
            "tags_all": {
              "Name": "Qa_App_Subnet"
            },
            "vpc_id": "vpc-00f32591937866832"
          },
          "dependencies": [
            "aws_vpc.qa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "qa_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:682574356252:vpc/vpc-00f32591937866832",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.168.0.0/16",
            "default_network_acl_id": "acl-0e8ef1c3ded9714f3",
            "default_route_table_id": "rtb-0a4b5dce015646540",
            "default_security_group_id": "sg-07a6fbae3dbbc51fc",
            "dhcp_options_id": "dopt-016dbdf22be73da49",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00f32591937866832",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a4b5dce015646540",
            "owner_id": "682574356252",
            "tags": {
              "Name": "Qa_Vpc"
            },
            "tags_all": {
              "Name": "Qa_Vpc"
            }
          }
        }
      ]
    }
  ]
}